--- a/views/index.pug
+++ b/views/index.pug
@@ -17,3 +17,5 @@ block content
     change-=1
     document.getElementById("reduce").innerHTML="Count "+count+" with change "+change
     }
+
+  a(href="drone") Drone Page
