--- a/views/board.pug
+++ b/views/board.pug
@@ -2,4 +2,27 @@ extends layout
 
 block content
   h1= title
-  
+  p Rows: #{query.rows}
+  p Columns: #{query.cols}
+  - var rows=Number(query.rows);
+  - var cols=Number(query.cols);
+  - if(!(Number.isInteger(rows) && Number.isInteger(cols)))
+    p Please enter numbers only
+  - else if(!(rows>=1 && rows<=10))
+    p Rows out of range
+  - else if(!(cols>=1 && cols<=10))
+    p Columns out of range
+  - else
+    table#outer
+      - for(let i=0; i<rows; i++){
+          tr#middle
+            - for(let j=0; j<cols; j++){
+                - if(i==j){
+                    td= 1
+                - }else if(j<i){
+                    td= 0
+                - }else{
+                    td= (j-i+1)
+                - }
+            - }
+      - }
